# grounded-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
src/rag/: __init__.py  agents.py  rag_pipeline.py  settings.py  tracing.py
src/rag/retrievers/: hybrid.py  production.py  vectorstore.py
src/rag/scripts/: __init__.py  ingestion.py
src/rag/tests/: test_agents.py  test_rag.py
src/rag/ui/: app.py
